--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.11.2",
-    "port-friends": "^1.2.1",
+    "port-friends": "~3.0.0",
     "require": "^2.4.17"
   }
 }
